# Pulse

./: .env.example  .gitignore  README.md  plan.md  test.txt
.github/workflows/: api.yml  web.yml
api/: pyproject.toml
api/migrations/: env.py
api/migrations/versions/: 0001_initial_schema.py
api/src/pulse_api/: __init__.py  config.py  database.py  main.py
api/src/pulse_api/models/: __init__.py  metric.py  pipeline.py  run.py
api/src/pulse_api/routers/: anomalies.py  dev.py  nodes.py  pipelines.py  ws.py
api/src/pulse_api/schemas/: anomaly.py  metric.py  pipeline.py  run.py
api/src/pulse_api/services/: live_simulator.py  node_state.py  ws_manager.py
api/src/pulse_api/services/synthetic/: dag_builder.py  generator.py  metric_simulator.py  run_simulator.py
api/tests/: conftest.py  test_anomalies.py  test_dev.py  test_main.py  test_node_state.py  test_nodes.py  test_pipelines.py  test_ws.py
docker/: api.Dockerfile  docker-compose.yml  web.Dockerfile
docs/: architecture.md
scripts/: dev.sh  seed.sh
web/: package.json  skills-lock.json
web/src/: App.tsx  index.css  index.html  index.ts
web/src/components/: Header.tsx  ThemeProvider.tsx
web/src/components/graph/: PipelineGraph.tsx
web/src/components/panels/: NodeDetailPanel.tsx
web/src/components/ui/: dropdown-menu.tsx
web/src/hooks/: usePipelineSocket.ts
web/src/lib/: api.ts
web/src/pages/: Data.tsx  Graph.tsx  Home.tsx  Insights.tsx
web/src/store/: graphStore.ts
web/src/types/: pipeline.ts
web/styles/: design-system.css  globals.css  graph.css
(+2 files in other folders)
